added transactions and working with userId
